--- a/StudentAssistant/src/main/resources/fxml/MainWindow.fxml
+++ b/StudentAssistant/src/main/resources/fxml/MainWindow.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="350.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:controller="unb.cs2043.StudentAssistant.fxml.MainWindowController" prefHeight="350.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -53,12 +53,12 @@
     </MenuBar>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="375.0" prefWidth="399.0" VBox.vgrow="ALWAYS">
       <children>
-            <Label layoutX="16.0" layoutY="9.0" text="Course List" />
+            <Label fx:id="lblCourseList" layoutX="16.0" layoutY="9.0" text="Course List" />
             <TreeView layoutX="14.0" layoutY="26.0" prefHeight="285.0" prefWidth="236.0" />
-            <Button layoutX="284.0" layoutY="26.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="97.0" text="Add Course" />
-            <Button layoutX="284.0" layoutY="60.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="97.0" text="Add Section" />
-            <Button layoutX="284.0" layoutY="95.0" mnemonicParsing="false" text="Add Class Time" />
-            <Button layoutX="265.0" layoutY="286.0" mnemonicParsing="false" text="Generate Schedule" />
+            <Button fx:id="btnAddCourse" layoutX="284.0" layoutY="26.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="97.0" text="Add Course" />
+            <Button fx:id="btnAddSection" layoutX="284.0" layoutY="60.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="97.0" text="Add Section" />
+            <Button fx:id="btnAddClassTime" layoutX="284.0" layoutY="95.0" mnemonicParsing="false" text="Add Class Time" />
+            <Button fx:id="btnGenSchedule" layoutX="265.0" layoutY="286.0" mnemonicParsing="false" text="Generate Schedule" />
       </children>
     </AnchorPane>
   </children>
