--- a/StudentAssistant/src/main/resources/fxml/AddEditSection.fxml
+++ b/StudentAssistant/src/main/resources/fxml/AddEditSection.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="173.0" prefWidth="425.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unb.cs2043.StudentAssistant.fxml.AddEditSectionController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="173.0" prefWidth="425.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unb.cs2043.student_assistant.fxml.AddEditSectionController">
    <children>
       <Label fx:id="lblCourse" layoutX="14.0" layoutY="14.0" text="Select Course" />
       <ComboBox fx:id="cmbCourse" layoutX="11.0" layoutY="33.0" prefHeight="25.0" prefWidth="400.0" />
