--- a/StudentAssistant/src/main/resources/fxml/LoadUNBCourses.fxml
+++ b/StudentAssistant/src/main/resources/fxml/LoadUNBCourses.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="170.0" minWidth="-Infinity" prefHeight="250.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unb.cs2043.StudentAssistant.fxml.LoadUNBCoursesController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="170.0" minWidth="-Infinity" prefHeight="250.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unb.cs2043.student_assistant.fxml.LoadUNBCoursesController">
    <children>
       <ProgressIndicator fx:id="loading" layoutX="150.0" layoutY="89.0" />
       <Label fx:id="termLabel" layoutX="14.0" layoutY="14.0" text="Select Term" visible="false" />
