--- a/StudentAssistant/src/main/resources/fxml/AddEditClassTime.fxml
+++ b/StudentAssistant/src/main/resources/fxml/AddEditClassTime.fxml
@@ -1,30 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXTimePicker?>
+
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="356.0" prefWidth="425.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="14.0" layoutY="14.0" text="Select Course" />
-      <Label layoutX="14.0" layoutY="68.0" text="Select Section" />
-      <Button layoutX="123.0" layoutY="213.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Add / Modify" />
-      <Button layoutX="227.0" layoutY="213.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Cancel" />
-      <Label layoutX="11.0" layoutY="122.0" text="Class Time" />
-      <JFXTimePicker layoutX="14.0" layoutY="159.0" />
-      <JFXTimePicker layoutX="236.0" layoutY="159.0" />
-      <Label layoutX="11.0" layoutY="142.0" text="From:" />
-      <Label layoutX="235.0" layoutY="142.0" text="To:" />
-      <ComboBox layoutX="11.0" layoutY="32.0" prefHeight="25.0" prefWidth="400.0" />
-      <ComboBox layoutX="11.0" layoutY="85.0" prefHeight="25.0" prefWidth="200.0" />
-      <Separator layoutY="249.0" prefHeight="1.0" prefWidth="425.0" />
-      <Label layoutX="14.0" layoutY="257.0" text="UNB Format" />
-      <TextField layoutX="11.0" layoutY="277.0" prefHeight="25.0" prefWidth="400.0" />
-      <Button layoutX="181.0" layoutY="317.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Add" />
+      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="356.0" prefWidth="425.0">
+         <children>
+            <Label layoutX="14.0" layoutY="14.0" text="Select Course" />
+            <Label layoutX="14.0" layoutY="68.0" text="Select Section" />
+            <Button layoutX="123.0" layoutY="213.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Add / Modify" />
+            <Button layoutX="227.0" layoutY="213.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Cancel" />
+            <Label layoutX="11.0" layoutY="122.0" text="Class Time" />
+            <JFXTimePicker layoutX="14.0" layoutY="159.0" />
+            <JFXTimePicker layoutX="236.0" layoutY="159.0" />
+            <Label layoutX="11.0" layoutY="142.0" text="From:" />
+            <Label layoutX="235.0" layoutY="142.0" text="To:" />
+            <ComboBox layoutX="11.0" layoutY="32.0" prefHeight="25.0" prefWidth="400.0" />
+            <ComboBox layoutX="11.0" layoutY="85.0" prefHeight="25.0" prefWidth="200.0" />
+            <Separator layoutY="249.0" prefHeight="1.0" prefWidth="425.0" />
+            <Label layoutX="14.0" layoutY="257.0" text="UNB Format" />
+            <TextField layoutX="11.0" layoutY="277.0" prefHeight="25.0" prefWidth="400.0" />
+            <Button layoutX="181.0" layoutY="317.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Add" />
+         </children>
+      </AnchorPane>
    </children>
-</AnchorPane>
+</StackPane>
