--- a/StudentAssistant/src/main/resources/fxml/AddEditSection.fxml
+++ b/StudentAssistant/src/main/resources/fxml/AddEditSection.fxml
@@ -5,14 +5,19 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="173.0" prefWidth="425.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unb.cs2043.student_assistant.fxml.AddEditSectionController">
+<StackPane xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unb.cs2043.student_assistant.fxml.AddEditSectionController">
    <children>
-      <Label fx:id="lblCourse" layoutX="14.0" layoutY="14.0" text="Select Course" />
-      <ComboBox fx:id="cmbCourse" layoutX="11.0" layoutY="33.0" prefHeight="25.0" prefWidth="400.0" />
-      <Label fx:id="lblSection" layoutX="14.0" layoutY="68.0" text="Section Name" />
-      <TextField fx:id="txfName" layoutX="14.0" layoutY="88.0" prefHeight="25.0" prefWidth="200.0" />
-      <Button fx:id="btnAdd" layoutX="125.0" layoutY="135.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Add / Modify" />
-      <Button fx:id="btnCancel" layoutX="229.0" layoutY="135.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Cancel" />
+      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="180.0" prefWidth="425.0">
+         <children>
+            <Label fx:id="lblCourse" layoutX="14.0" layoutY="14.0" text="Select Course" />
+            <ComboBox fx:id="cmbCourse" layoutX="11.0" layoutY="33.0" prefHeight="25.0" prefWidth="400.0" />
+            <Label fx:id="lblSection" layoutX="14.0" layoutY="68.0" text="Section Name" />
+            <TextField fx:id="txfName" layoutX="14.0" layoutY="88.0" prefHeight="25.0" prefWidth="200.0" />
+            <Button fx:id="btnAdd" layoutX="125.0" layoutY="135.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Add / Modify" />
+            <Button fx:id="btnCancel" layoutX="229.0" layoutY="135.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Cancel" />
+         </children>
+      </AnchorPane>
    </children>
-</AnchorPane>
+</StackPane>
