--- a/StudentAssistant/src/main/resources/fxml/MainWindow.fxml
+++ b/StudentAssistant/src/main/resources/fxml/MainWindow.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
+
 <VBox prefHeight="350.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unb.cs2043.student_assistant.fxml.MainWindowController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
@@ -52,7 +53,7 @@
         </Menu>
       </menus>
     </MenuBar>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="375.0" prefWidth="399.0" VBox.vgrow="ALWAYS">
+    <AnchorPane maxHeight="-1.0" maxWidth="-1.0">
       <children>
             <Label fx:id="lblCourseList" layoutX="16.0" layoutY="9.0" text="Course List" />
             <TreeView fx:id="treeCourseList" layoutX="14.0" layoutY="26.0" prefHeight="285.0" prefWidth="236.0" />
