--- a/StudentAssistant/src/main/resources/fxml/AddEditSection.fxml
+++ b/StudentAssistant/src/main/resources/fxml/AddEditSection.fxml
@@ -15,8 +15,8 @@
             <ComboBox fx:id="cmbCourse" layoutX="11.0" layoutY="33.0" prefHeight="25.0" prefWidth="400.0" />
             <Label fx:id="lblSection" layoutX="14.0" layoutY="68.0" text="Section Name" />
             <TextField fx:id="txfName" layoutX="14.0" layoutY="88.0" prefHeight="25.0" prefWidth="200.0" />
-            <Button fx:id="btnAdd" layoutX="125.0" layoutY="135.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Add / Modify" />
-            <Button fx:id="btnCancel" layoutX="229.0" layoutY="135.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Cancel" />
+            <Button fx:id="btnAdd" layoutX="107.0" layoutY="135.0" mnemonicParsing="false" text="Add / Modify" />
+            <Button fx:id="btnCancel" layoutX="233.0" layoutY="135.0" mnemonicParsing="false" text="Cancel" />
          </children>
       </AnchorPane>
    </children>
