--- a/StudentAssistant/src/main/resources/fxml/LoadUNBCourses.fxml
+++ b/StudentAssistant/src/main/resources/fxml/LoadUNBCourses.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
 
-
 <StackPane xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unb.cs2043.student_assistant.fxml.LoadUNBCoursesController">
    <children>
       <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="350.0">
@@ -19,8 +18,8 @@
             <ComboBox fx:id="levelSelect" layoutX="13.0" layoutY="90.0" prefWidth="325.0" visible="false" />
             <Label fx:id="locationLabel" layoutX="14.0" layoutY="130.0" text="Select Location" visible="false" AnchorPane.leftAnchor="14.0" />
             <ComboBox fx:id="locationSelect" layoutX="13.0" layoutY="148.0" prefWidth="325.0" visible="false" />
-            <Button fx:id="loadBtn" disable="true" layoutX="94.0" layoutY="211.0" mnemonicParsing="false" onMouseClicked="#loadData" prefHeight="25.0" prefWidth="75.0" text="Load Data" />
-            <Button fx:id="cancelBtn" layoutX="187.0" layoutY="211.0" mnemonicParsing="false" onMouseClicked="#closeWindow" prefHeight="25.0" prefWidth="55.0" text="Cancel" />
+            <Button fx:id="loadBtn" disable="true" layoutX="84.0" layoutY="211.0" mnemonicParsing="false" onMouseClicked="#loadData" text="Load Data" />
+            <Button fx:id="cancelBtn" layoutX="191.0" layoutY="211.0" mnemonicParsing="false" onMouseClicked="#closeWindow" text="Cancel" />
          </children>
       </AnchorPane>
    </children>
