--- a/StudentAssistant/src/main/resources/fxml/MainWindow.fxml
+++ b/StudentAssistant/src/main/resources/fxml/MainWindow.fxml
@@ -10,8 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox prefHeight="350.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unb.cs2043.student_assistant.fxml.MainWindowController">
+<VBox prefHeight="350.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unb.cs2043.student_assistant.fxml.MainWindowController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -56,11 +55,15 @@
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0">
       <children>
             <Label fx:id="lblCourseList" layoutX="16.0" layoutY="9.0" text="Course List" />
-            <TreeView fx:id="treeCourseList" layoutX="14.0" layoutY="26.0" prefHeight="285.0" prefWidth="236.0" />
-            <Button fx:id="btnAddCourse" layoutX="284.0" layoutY="26.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="97.0" text="Add Course" />
-            <Button fx:id="btnAddSection" layoutX="284.0" layoutY="60.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="97.0" text="Add Section" />
-            <Button fx:id="btnAddClassTime" layoutX="284.0" layoutY="95.0" mnemonicParsing="false" text="Add Class Time" />
-            <Button fx:id="btnGenSchedule" layoutX="265.0" layoutY="286.0" mnemonicParsing="false" text="Generate Schedule" />
+            <TreeView fx:id="treeCourseList" layoutX="14.0" layoutY="26.0" prefHeight="286.0" prefWidth="325.0" />
+            <VBox layoutX="372.0" layoutY="27.0" prefHeight="38.0" spacing="10.0">
+               <children>
+                  <Button fx:id="btnAddCourse" alignment="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Add Course" VBox.vgrow="ALWAYS" />
+                  <Button fx:id="btnAddSection" alignment="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Add Section" VBox.vgrow="ALWAYS" />
+                  <Button fx:id="btnAddClassTime" alignment="CENTER" mnemonicParsing="false" text="Add Class Time" />
+               </children>
+            </VBox>
+            <Button fx:id="btnGenSchedule" alignment="CENTER" layoutX="363.0" layoutY="274.0" mnemonicParsing="false" text="Generate Schedule" />
       </children>
     </AnchorPane>
   </children>
