--- a/StudentAssistant/src/main/resources/fxml/LoadUNBCourses.fxml
+++ b/StudentAssistant/src/main/resources/fxml/LoadUNBCourses.fxml
@@ -9,7 +9,7 @@
 
 <StackPane xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unb.cs2043.student_assistant.fxml.LoadUNBCoursesController">
    <children>
-      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="350.0">
+      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="350.0">
          <children>
             <ProgressIndicator fx:id="loading" layoutX="149.0" layoutY="76.0" />
             <Label fx:id="termLabel" layoutX="14.0" layoutY="14.0" text="Select Term" visible="false" />
