--- a/StudentAssistant/src/main/resources/fxml/MainWindow.fxml
+++ b/StudentAssistant/src/main/resources/fxml/MainWindow.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="350.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unb.cs2043.student_assistant.fxml.MainWindowController">
+<VBox prefHeight="350.0" prefWidth="525.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unb.cs2043.student_assistant.fxml.MainWindowController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -52,18 +52,19 @@
         </Menu>
       </menus>
     </MenuBar>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0">
+    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="314.0" prefWidth="575.0">
       <children>
-            <Label fx:id="lblCourseList" layoutX="16.0" layoutY="9.0" text="Course List" />
-            <TreeView fx:id="treeCourseList" layoutX="14.0" layoutY="26.0" prefHeight="286.0" prefWidth="325.0" />
-            <VBox layoutX="372.0" layoutY="27.0" prefHeight="38.0" spacing="10.0">
+            <VBox layoutX="370.0" layoutY="27.0" prefHeight="286.0" prefWidth="130.0" spacing="10.0">
                <children>
-                  <Button fx:id="btnAddCourse" alignment="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Add Course" VBox.vgrow="ALWAYS" />
-                  <Button fx:id="btnAddSection" alignment="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Add Section" VBox.vgrow="ALWAYS" />
-                  <Button fx:id="btnAddClassTime" alignment="CENTER" mnemonicParsing="false" text="Add Class Time" />
+                  <Button fx:id="btnAddCourse" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Add Course" />
+                  <Button fx:id="btnAddSection" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Add Section" />
+                  <Button fx:id="btnAddClassTime" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Add Class Time" />
+                  <Label fx:id="msgLabel" alignment="TOP_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="130.0" wrapText="true" VBox.vgrow="ALWAYS" />
+                  <Button fx:id="btnGenSchedule" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Generate Schedule" />
                </children>
             </VBox>
-            <Button fx:id="btnGenSchedule" alignment="CENTER" layoutX="363.0" layoutY="274.0" mnemonicParsing="false" text="Generate Schedule" />
+            <Label fx:id="lblCourseList" layoutX="16.0" layoutY="9.0" text="Course List" />
+            <TreeView fx:id="treeCourseList" layoutX="14.0" layoutY="26.0" prefHeight="286.0" prefWidth="338.0" />
       </children>
     </AnchorPane>
   </children>
