--- a/StudentAssistant/src/main/resources/fxml/AddEditCourse.fxml
+++ b/StudentAssistant/src/main/resources/fxml/AddEditCourse.fxml
@@ -8,11 +8,11 @@
 
 <StackPane xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unb.cs2043.student_assistant.fxml.AddEditCourseController">
    <children>
-      <AnchorPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="170.0" prefWidth="425.0">
+      <AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="170.0" prefWidth="425.0">
          <children>
             <Label fx:id="lblName" layoutX="14.0" layoutY="14.0" text="Course Name" />
-            <Button fx:id="btnAdd" layoutX="107.0" layoutY="110.0" mnemonicParsing="false" text="Add / Modify" AnchorPane.bottomAnchor="14.800000000000011" />
-            <Button fx:id="btnCancel" layoutX="235.0" layoutY="110.0" mnemonicParsing="false" text="Cancel" AnchorPane.bottomAnchor="14.800000000000011" />
+            <Button fx:id="btnAdd" defaultButton="true" layoutX="107.0" layoutY="110.0" mnemonicParsing="false" text="Add / Modify" AnchorPane.bottomAnchor="14.800000000000011" />
+            <Button fx:id="btnCancel" cancelButton="true" layoutX="235.0" layoutY="110.0" mnemonicParsing="false" text="Cancel" AnchorPane.bottomAnchor="14.800000000000011" />
             <TextField layoutX="12.0" layoutY="35.0" prefHeight="25.0" prefWidth="400.0" />
          </children>
       </AnchorPane>
