--- a/StudentAssistant/src/main/resources/fxml/AddEditClassTime.fxml
+++ b/StudentAssistant/src/main/resources/fxml/AddEditClassTime.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXTimePicker?>
-
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
@@ -10,26 +10,42 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
 
-
-<StackPane xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane fx:id="container" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unb.cs2043.student_assistant.fxml.AddEditClassTimeController">
    <children>
-      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="356.0" prefWidth="425.0">
+      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="559.0" prefWidth="425.0">
          <children>
             <Label layoutX="14.0" layoutY="14.0" text="Select Course" />
             <Label layoutX="14.0" layoutY="68.0" text="Select Section" />
-            <Button layoutX="123.0" layoutY="213.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Add / Modify" />
-            <Button layoutX="227.0" layoutY="213.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Cancel" />
-            <Label layoutX="11.0" layoutY="122.0" text="Class Time" />
-            <JFXTimePicker layoutX="14.0" layoutY="159.0" />
-            <JFXTimePicker layoutX="236.0" layoutY="159.0" />
-            <Label layoutX="11.0" layoutY="142.0" text="From:" />
-            <Label layoutX="235.0" layoutY="142.0" text="To:" />
-            <ComboBox layoutX="11.0" layoutY="32.0" prefHeight="25.0" prefWidth="400.0" />
-            <ComboBox layoutX="11.0" layoutY="85.0" prefHeight="25.0" prefWidth="200.0" />
-            <Separator layoutY="249.0" prefHeight="1.0" prefWidth="425.0" />
-            <Label layoutX="14.0" layoutY="257.0" text="UNB Format" />
-            <TextField layoutX="11.0" layoutY="277.0" prefHeight="25.0" prefWidth="400.0" />
-            <Button layoutX="181.0" layoutY="317.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Add" />
+            <Button fx:id="btnAdd" layoutX="126.0" layoutY="416.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Add / Modify" />
+            <Button fx:id="btnCancel" layoutX="230.0" layoutY="416.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Cancel" />
+            <Label fx:id="lblClassTime" layoutX="14.0" layoutY="309.0" text="Class Time" />
+            <JFXTimePicker fx:id="timePickFrom" layoutX="13.0" layoutY="343.0" />
+            <JFXTimePicker fx:id="timePickTo" layoutX="232.0" layoutY="343.0" />
+            <Label fx:id="lblFrom" layoutX="16.0" layoutY="326.0" text="From:" />
+            <Label fx:id="lblTo" layoutX="232.0" layoutY="326.0" text="To:" />
+            <ComboBox fx:id="cmbCourse" layoutX="11.0" layoutY="32.0" prefHeight="25.0" prefWidth="400.0" />
+            <ComboBox fx:id="cmbSection" layoutX="11.0" layoutY="85.0" prefHeight="25.0" prefWidth="200.0" />
+            <Separator layoutX="-1.0" layoutY="452.0" prefHeight="1.0" prefWidth="425.0" />
+            <Label layoutX="13.0" layoutY="460.0" text="UNB Format" />
+            <TextField layoutX="10.0" layoutY="480.0" prefHeight="25.0" prefWidth="400.0" />
+            <Button layoutX="180.0" layoutY="520.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Add" />
+            <Label layoutX="14.0" layoutY="122.0" text="Week Day:" />
+            <CheckBox fx:id="chkSun" layoutX="15.0" layoutY="148.0" mnemonicParsing="false" text="Sunday" />
+            <CheckBox fx:id="chkMon" layoutX="15.0" layoutY="169.0" mnemonicParsing="false" text="Monday" />
+            <CheckBox fx:id="chkTue" layoutX="15.0" layoutY="190.0" mnemonicParsing="false" text="Tuesday" />
+            <CheckBox fx:id="chkWed" layoutX="15.0" layoutY="212.0" mnemonicParsing="false" text="Wednesday" />
+            <CheckBox fx:id="chkThu" layoutX="15.0" layoutY="234.0" mnemonicParsing="false" text="Thursday" />
+            <CheckBox fx:id="chkFri" layoutX="15.0" layoutY="255.0" mnemonicParsing="false" text="Friday" />
+            <CheckBox fx:id="chkSat" layoutX="16.0" layoutY="277.0" mnemonicParsing="false" text="Saturday" />
+            <Label layoutX="218.0" layoutY="122.0" text="Type:" />
+            <CheckBox fx:id="chkLec" layoutX="227.0" layoutY="155.0" mnemonicParsing="false" text="Lecture" />
+            <CheckBox fx:id="chkLab" layoutX="227.0" layoutY="177.0" mnemonicParsing="false" text="Laboratory" />
+            <CheckBox fx:id="chkTut" layoutX="227.0" layoutY="198.0" mnemonicParsing="false" text="Tutorial" />
+            <CheckBox fx:id="chkOth" layoutX="227.0" layoutY="219.0" mnemonicParsing="false" text="Other" />
+            <Separator layoutX="-1.0" layoutY="120.0" prefHeight="1.0" prefWidth="425.0" />
+            <Separator layoutX="-1.0" layoutY="304.0" prefHeight="1.0" prefWidth="425.0" />
+            <Separator layoutX="213.0" layoutY="120.0" orientation="VERTICAL" prefHeight="185.0" prefWidth="3.0" />
+            <Separator layoutY="392.0" prefHeight="1.0" prefWidth="425.0" />
          </children>
       </AnchorPane>
    </children>
