Implemented the contextmenu and added some quality of life stuff.
Stuff added/changed:
- Context menu (To see the context menu in action, right click items in
the TreeView)
- Proper field now autofocuses when opening a window.
- If editing, old value(s) will be automatically filled (Not yet
implemented for class time).
- Made buttons disable/enable and change name dynamically (Give me some
feedback if you like this or not. I'm not sure if this might confuse the
user more than help him/her)
- Added tooltips on buttons to show the keyboard shortcut combination.

TODO: Add delete option in context menu.

--- a/StudentAssistant/src/main/resources/fxml/AddEditCourse.fxml
+++ b/StudentAssistant/src/main/resources/fxml/AddEditCourse.fxml
@@ -11,8 +11,8 @@
       <AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="170.0" prefWidth="425.0">
          <children>
             <Label fx:id="lblName" layoutX="14.0" layoutY="14.0" text="Course Name" />
-            <Button fx:id="btnAdd" defaultButton="true" layoutX="107.0" layoutY="110.0" mnemonicParsing="false" text="Add / Modify" AnchorPane.bottomAnchor="14.800000000000011" />
-            <Button fx:id="btnCancel" cancelButton="true" layoutX="235.0" layoutY="110.0" mnemonicParsing="false" text="Cancel" AnchorPane.bottomAnchor="14.800000000000011" />
+            <Button fx:id="btnAdd" defaultButton="true" layoutX="132.0" layoutY="130.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="72.0" text="Add" AnchorPane.bottomAnchor="15.0" />
+            <Button fx:id="btnCancel" cancelButton="true" layoutX="223.0" layoutY="130.0" mnemonicParsing="false" text="Cancel" AnchorPane.bottomAnchor="14.800000000000011" />
             <TextField layoutX="12.0" layoutY="35.0" prefHeight="25.0" prefWidth="400.0" />
          </children>
       </AnchorPane>
