--- a/StudentAssistant/src/main/resources/fxml/AddEditClassTime.fxml
+++ b/StudentAssistant/src/main/resources/fxml/AddEditClassTime.fxml
@@ -17,8 +17,8 @@
          <children>
             <Label layoutX="14.0" layoutY="14.0" text="Select Course" />
             <Label layoutX="14.0" layoutY="68.0" text="Select Section" />
-            <Button fx:id="btnAdd" layoutX="122.0" layoutY="367.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Add / Modify" />
-            <Button fx:id="btnCancel" layoutX="226.0" layoutY="367.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Cancel" />
+            <Button fx:id="btnAdd" layoutX="127.0" layoutY="367.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Add" />
+            <Button fx:id="btnCancel" layoutX="222.0" layoutY="367.0" mnemonicParsing="false" prefHeight="25.0" text="Cancel" />
             <Label fx:id="lblClassTime" layoutX="14.0" layoutY="269.0" text="Class Time" />
             <Label fx:id="lblFrom" layoutX="16.0" layoutY="297.0" text="From" />
             <Label fx:id="lblTo" layoutX="234.0" layoutY="296.0" text="To" />
