--- a/StudentAssistant/src/main/resources/fxml/AddEditClassTime.fxml
+++ b/StudentAssistant/src/main/resources/fxml/AddEditClassTime.fxml
@@ -21,7 +21,7 @@
             <ComboBox fx:id="cmbSection" layoutX="11.0" layoutY="85.0" prefHeight="25.0" prefWidth="200.0" />
             <Label layoutX="14.0" layoutY="122.0" text="Week Day:" />
             <CheckBox fx:id="chkMon" layoutX="14.0" layoutY="148.0" mnemonicParsing="false" text="Monday" />
-            <CheckBox fx:id="chkTue" layoutX="94.0" layoutY="148.0" mnemonicParsing="false" prefHeight="3.0" prefWidth="65.0" text="Tuesday" />
+            <CheckBox fx:id="chkTue" layoutX="94.0" layoutY="148.0" mnemonicParsing="false" text="Tuesday" />
             <CheckBox fx:id="chkWed" layoutX="172.0" layoutY="148.0" mnemonicParsing="false" text="Wednesday" />
             <CheckBox fx:id="chkThu" layoutX="269.0" layoutY="148.0" mnemonicParsing="false" text="Thursday" />
             <CheckBox fx:id="chkFri" layoutX="354.0" layoutY="148.0" mnemonicParsing="false" text="Friday" />
@@ -38,8 +38,8 @@
             <Label fx:id="lblTo" layoutX="234.0" layoutY="296.0" text="End" />
             <Spinner fx:id="spinnerEnd" layoutX="256.0" layoutY="293.0" />
             <Label fx:id="lblTimeError" layoutX="15.0" layoutY="325.0" />
-            <Button fx:id="btnAdd" layoutX="127.0" layoutY="367.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Add" />
-            <Button fx:id="btnCancel" layoutX="222.0" layoutY="367.0" mnemonicParsing="false" prefHeight="25.0" text="Cancel" />
+            <Button fx:id="btnAdd" defaultButton="true" layoutX="127.0" layoutY="367.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Add" />
+            <Button fx:id="btnCancel" cancelButton="true" layoutX="222.0" layoutY="367.0" mnemonicParsing="false" prefHeight="25.0" text="Cancel" />
             <Separator layoutX="-1.0" layoutY="401.0" prefHeight="1.0" prefWidth="425.0" />
             <Label layoutX="13.0" layoutY="409.0" text="UNB Format" />
             <TextField layoutX="10.0" layoutY="429.0" prefHeight="25.0" prefWidth="400.0" />
